--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,59 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <h1>Hola</h1>
+    <div class="contenedor">
+        <!-- Section con el móvil en la derecha -->
+       <section class="primero">
+           <!-- Texto + botones -->
+        <article class="primero__texto">
+            <h1>Mobile Devices</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, quibusdam quod voluptate sint repellat consequuntur dolore. Eligendi quae cupiditate optio quaerat veritatis, est nihil quia animi perferendis, fuga pariatur! Cupiditate, fugiat. Repudiandae placeat voluptates veniam odio ex eos illum dicta eligendi voluptatum. Sequi corrupti harum, odio, nesciunt aut quos eius consequuntur laboriosam quisquam rem nulla necessitatibus laudantium recusandae, aliquam aspernatur.</p>
+            <p class="azul">
+                <span></span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quisquam, deserunt quidem recusandae ullam maxime unde possimus porro provident, accusantium magni accusamus eum rerum iusto aperiam dignissimos atque, inventore tenetur.
+            </p>
+            <p>
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi quo aliquid architecto culpa voluptates, quisquam consequuntur, quod, doloribus deleniti optio ipsam maiores quia asperiores non commodi fugit ab rerum blanditiis.
+            </p>
+            <a> <img src="./assets/img/svg/descargar.svg" alt=""> FREE VERSION</a>
+        </article>
+        <!-- imagen -->
+        <article class="primero__imagen">
+            <picture>        
+                <!-- escritorio -->
+                <source
+                  srcset="./assets/img/desktop/iphones-left.png"
+                />
+                <!-- Etiqueta img -->
+                <img src="" alt="movil" />
+              </picture>
+        </article>
+       </section> 
+       <section class="segundo">
+            <article class="segundo__imagen">
+                <picture>        
+                    <!-- escritorio -->
+                    <source
+                      srcset="./assets/img/desktop/iphones-right.png"
+                    />
+                    <!-- Etiqueta img -->
+                    <img src="" alt="movil" />
+                  </picture>
+            </article>
+            </article>
+            <article class="segundo__texto">
+                <h2>Responsive Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptate iusto, dignissimos officiis quasi tenetur et veritatis distinctio animi cumque placeat pariatur eaque explicabo assumenda, quod fugit adipisci. Expedita voluptatum quos dolor possimus vero sit, asperiores accusantium repudiandae ipsum iusto totam nesciunt nobis eaque qui! Odio totam animi ipsa adipisci vitae sunt, dolore ducimus illo eveniet amet in accusamus eius aperiam voluptatem cumque ut officia. Enim nam at dignissimos sit, ipsa quae delectus cumque accusantium fuga? Voluptate rerum magni dolorem modi! Voluptatem, magnam. Expedita magnam vel soluta error esse harum adipisci? Sunt repudiandae dolor, delectus reprehenderit iure ratione labore accusamus?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, asperiores, reprehenderit animi numquam et temporibus explicabo aut nulla voluptates beatae ipsum alias possimus ipsam? Assumenda qui debitis corporis distinctio, voluptas deleniti a aliquid amet doloremque asperiores exercitationem, ipsa provident eaque?</p>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                    <li>Fugiat, cumque quas explicabo et ut at numquam!</li>
+                    <li>Deserunt, quibusdam itaque nobis nesciunt architecto dicta assumenda!</li>
+                    <li>Porro eligendi harum dicta alias, vitae officiis quo.</li>
+                    <li>Odio quod, vitae voluptatibus a dignissimos in facere.</li>
+                </ul>
+            </article>
+       </section>
+    </div>
 </body>
 </html>
