--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,9 @@
               </picture>
         </article>
        </section> 
+       <!-- Segundo section -->
        <section class="segundo">
+           <!-- Imagen izquierda -->
             <article class="segundo__imagen">
                 <picture>        
                     <!-- escritorio -->
@@ -47,11 +49,13 @@
                     <img src="" alt="movil" />
                   </picture>
             </article>
-            </article>
+            </article>  
+            <!-- texto derecha -->
             <article class="segundo__texto">
                 <h2>Responsive Design</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptate iusto, dignissimos officiis quasi tenetur et veritatis distinctio animi cumque placeat pariatur eaque explicabo assumenda, quod fugit adipisci. Expedita voluptatum quos dolor possimus vero sit, asperiores accusantium repudiandae ipsum iusto totam nesciunt nobis eaque qui! Odio totam animi ipsa adipisci vitae sunt, dolore ducimus illo eveniet amet in accusamus eius aperiam voluptatem cumque ut officia. Enim nam at dignissimos sit, ipsa quae delectus cumque accusantium fuga? Voluptate rerum magni dolorem modi! Voluptatem, magnam. Expedita magnam vel soluta error esse harum adipisci? Sunt repudiandae dolor, delectus reprehenderit iure ratione labore accusamus?</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, asperiores, reprehenderit animi numquam et temporibus explicabo aut nulla voluptates beatae ipsum alias possimus ipsam? Assumenda qui debitis corporis distinctio, voluptas deleniti a aliquid amet doloremque asperiores exercitationem, ipsa provident eaque?</p>
+                <!-- Lista -->
                 <ul>
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
                     <li>Fugiat, cumque quas explicabo et ut at numquam!</li>
